--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </ul>
             </div>
         </div>
-        <div class="container blue circleBehind">
+        <div class="container blue circleBehind" id="mediaquery_header">
             <a href="#home">HOME</a>
             <a href="#about">SOBRE MI</a>
             <a href="#contact">CONTACTO</a>
